<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <!-- Theorem -->
    <groupId>com.devamatre.theorem</groupId>
    <artifactId>Theorem</artifactId>
    <version>${revision}</version>
    <packaging>jar</packaging>
    <name>The ${project.artifactId} Project</name>
    <url>https://github.com/rslakra/Theorem</url>

    <!-- Properties -->
    <properties>
        <!-- revision -->
        <revision>0.0.0</revision>

        <!-- sourceEncoding & outputEncoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- java version -->
        <java.version>11</java.version>

        <!-- maven -->
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>

        <!-- maven plugins -->
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>

        <!-- checkstyle -->
        <code-styles.dir>https://raw.githubusercontent.com/rslakra/code-styles/master</code-styles.dir>
        <checkstyle.threshold>0</checkstyle.threshold>

        <!-- appsuite-core -->
        <appsuite-core.version>0.0.28</appsuite-core.version>

        <!-- lombok -->
        <lombok.version>1.18.28</lombok.version>

        <!-- swagger -->
        <swagger.skip>false</swagger.skip>

        <!-- slf4j -->
        <slf4j-api.version>2.0.10</slf4j-api.version>
        <logback-classic.version>1.4.14</logback-classic.version>

        <!-- apache commons -->
        <commons-lang3.version>3.12.0</commons-lang3.version>

        <!-- junit-jupiter-params -->
        <junit-jupiter-params.version>5.9.2</junit-jupiter-params.version>
        <!-- testng -->
        <testng.version>7.9.0</testng.version>
    </properties>

    <!-- Dependencies -->
    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback-classic.version}</version>
        </dependency>

        <!-- appsuite-core -->
        <dependency>
            <groupId>com.devamatre.appsuite</groupId>
            <artifactId>appsuite-core</artifactId>
            <version>${appsuite-core.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit-jupiter-params.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- profiles -->
    <profiles>

        <!-- snapshot -->
        <profile>
            <id>snapshot-repository</id>
            <activation>
                <property>
                    <name>snapshot</name>
                    <value>true</value>
                </property>
            </activation>
            <properties>
                <buildVersion>${project.version}-SNAPSHOT</buildVersion>
            </properties>
        </profile>

        <!-- release -->
        <profile>
            <id>release-repository</id>
            <activation>
                <property>
                    <name>!snapshot</name>
                </property>
            </activation>
            <properties>
                <buildVersion>${project.version</buildVersion>
            </properties>
        </profile>

    </profiles>

    <!-- Build -->
    <build>
        <!-- plugins -->
        <plugins>

            <!-- Note:- Don't uncomment this plug-in for the common packages -->
            <!-- frameworks-boot-maven-plugin -->
            <!--            <plugin>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
            <!--            </plugin>-->

            <!-- maven-compiler-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- maven-checkstyle-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <executions>
                    <execution>
                        <id>default</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <configLocation>${code-styles.dir}/styles.xml</configLocation>
                            <propertiesLocation>${code-styles.dir}/checkstyle.properties</propertiesLocation>
                            <logViolationsToConsole>true</logViolationsToConsole>
                            <maxAllowedViolations>${checkstyle.threshold}</maxAllowedViolations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- maven-release-plugin -->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-release-plugin</artifactId>-->
            <!--                <version>${maven-release-plugin.version}</version>-->
            <!--                <configuration>-->
            <!--                    <tagNameFormat>${project.version}</tagNameFormat>-->
            <!--                    <checkModificationExcludes>-->
            <!--                        <checkModificationExclude>pom.xml</checkModificationExclude>-->
            <!--                    </checkModificationExcludes>-->
            <!--                </configuration>-->
            <!--            </plugin>-->

        </plugins>

    </build>

    <!-- reporting -->
    <reporting>

        <!-- plugins -->
        <plugins>
            <!-- maven-checkstyle-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <configuration>
                    <configLocation>${code-styles.dir}/styles.xml</configLocation>
                    <propertiesLocation>${code-styles.dir}/checkstyle.properties</propertiesLocation>
                </configuration>
            </plugin>
        </plugins>

    </reporting>
</project>
